tests/jastadd/negative/type_errors/L4/10_RecordAccess2.ob
MODULE TestModule;
	TYPE r = RECORD 
				f : INTEGER
			END;
	VAR a : r;
		b : INTEGER;
BEGIN
	a.f := b;      (* OK *)
	b := a.f;      (* OK *)
	a.f2 := b      (* NOT OK, unknown field *)
END TestModule. 
